# novelcraft

./: .env.example  .gitignore  Makefile  README.md  dev.sh  docker-compose.yml  package-lock.json  start.sh
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  chat.py  files.py  knowledge_graph.py  simulation.py  style_import.py
backend/app/schemas/: __init__.py  file_models.py  settings.py
backend/app/services/: __init__.py  file_manager.py  inference_engine.py  lightrag_service.py  oasis_simulation.py  vibewriter.py
backend/data/projects/30ddc6ba/: project.md
backend/data/projects/30ddc6ba/analysis/: plot-analysis.json  style-fingerprint.schema.json
backend/data/projects/30ddc6ba/characters/: 新角色API测试.md  李明.md  测试角色.md
backend/data/projects/30ddc6ba/novel/: _sidebar.md  index.html
backend/data/projects/30ddc6ba/novel/chapters/: 001.md  002.md
backend/data/projects/30ddc6ba/novel/styles/: theme.css
backend/data/projects/30ddc6ba/settings/: README.md
backend/data/projects/30ddc6ba/state/: current-state.yaml
backend/data/projects/30ddc6ba/state/sessions/: 3907ddaa.yaml
backend/data/projects/7bfff004/: project.md
backend/data/projects/7bfff004/analysis/: style-fingerprint.json
backend/data/projects/7bfff004/characters/: README.md
backend/data/projects/7bfff004/novel/: README.md  _sidebar.md
backend/data/projects/7bfff004/novel/chapters/: 001.md
backend/data/projects/7bfff004/state/: current-state.yaml
backend/data/simulations/sim_031a4dd2c864/: config.json  profiles.json  result.json
backend/data/simulations/sim_1ce0f8b875e0/: config.json  result.json
designs/: novelcraft-home.html
(+122 files in other folders)
